// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvaluationGraph > should render correctly with a mate score 1`] = `
<div
  aria-label="Evaluation trend graph"
  class="relative overflow-hidden rounded bg-gray-50/50 p-1 "
  role="img"
  style="width: 100%; height: 60px;"
>
  <svg
    class="h-full w-full overflow-visible"
    preserveAspectRatio="none"
    viewBox="0 0 200 60"
  >
    <line
      class="text-gray-200"
      stroke="currentColor"
      stroke-dasharray="2,2"
      x1="0"
      x2="200"
      y1="30"
      y2="30"
    />
    <path
      class="text-primary transition-all duration-300 ease-in-out"
      d="M 0,27 L 200,0"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <circle
      class="fill-primary"
      cx="200"
      cy="0"
      r="3"
    />
  </svg>
</div>
`;

exports[`EvaluationGraph > should render correctly with entries 1`] = `
<div
  aria-label="Evaluation trend graph"
  class="relative overflow-hidden rounded bg-gray-50/50 p-1 "
  role="img"
  style="width: 100%; height: 60px;"
>
  <svg
    class="h-full w-full overflow-visible"
    preserveAspectRatio="none"
    viewBox="0 0 200 60"
  >
    <line
      class="text-gray-200"
      stroke="currentColor"
      stroke-dasharray="2,2"
      x1="0"
      x2="200"
      y1="30"
      y2="30"
    />
    <path
      class="text-primary transition-all duration-300 ease-in-out"
      d="M 0,29.7 L 200,28.5"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <circle
      class="fill-primary"
      cx="200"
      cy="28.5"
      r="3"
    />
  </svg>
</div>
`;

exports[`EvaluationGraph > should render correctly with no entries 1`] = `
<div
  aria-label="Evaluation trend graph"
  class="relative overflow-hidden rounded bg-gray-50/50 p-1 "
  role="img"
  style="width: 100%; height: 60px;"
>
  <svg
    class="h-full w-full overflow-visible"
    preserveAspectRatio="none"
    viewBox="0 0 200 60"
  >
    <line
      class="text-gray-200"
      stroke="currentColor"
      stroke-dasharray="2,2"
      x1="0"
      x2="200"
      y1="30"
      y2="30"
    />
    <path
      class="text-primary transition-all duration-300 ease-in-out"
      d=""
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;
